--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fentasy",
-  "homepage": "https://gitname.github.io/fentasy",
+  "homepage": "https://gitname.github.io/fentasy/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
