--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "fentasy",
-  "homepage": "https://gitname.github.io/fentasy/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "vite build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -24,7 +21,6 @@
     "@phosphor-icons/react": "^2.1.5",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
-    "gh-pages": "^6.1.1",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "prettier": "^3.2.5",
