--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.15.18",
     "@mui/x-date-pickers": "^6.20.0",
     "@phosphor-icons/react": "^2.1.5",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "lodash": "^4.17.21",
@@ -29,6 +30,7 @@
     "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.23.1",
     "sass": "^1.77.2",
+    "simplebar-react": "^3.2.5",
     "yup": "^1.4.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
@@ -36,6 +38,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
+    "@iconify/react": "^5.0.1",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
