--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.23.1",
+    "react-spring-3d-carousel": "^1.3.4",
     "sass": "^1.77.2",
     "simplebar-react": "^3.2.5",
     "yup": "^1.4.0",
